--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-This is simply a test project to mark how much I have learned c++.
+This is simply a test project to mark how much I have learned c++. (.exe file only for windows)
 
 How this works:
 
